tests/ui/rfcs/rfc-2632-const-trait-impl/trait-where-clause-run.stderr
error[E0015]: cannot call non-const fn `<Self as Bar>::bar` in constant functions
  --> $DIR/trait-where-clause-run.rs:14:9
   |
LL |         <Self as Bar>::bar() * 6
   |         ^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
